--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@monaco-editor/react": "^4.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-markdown": "^9.0.1"
+    "react-hot-toast": "^2.4.1",
+    "react-markdown": "^9.0.1",
+    "react-resizable-panels": "^2.1.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
